# track

./: .gitignore  Cargo.toml  README.md
.github/workflows/: backup-postgres.yml  build-client.yml  build-docker-image.yml  build-server-image.yml  create-postgres-backup.yml  deploy-client.yml  deploy-server-image.yml  deploy.yml  restore-from-backup.yml  restore_from_backup.yml  upload-to-gcs-bucket.yml
docker/: base.yml  dev.yml  prod.yml
gcs/: store.json
ops/: .bashrc  alias-docker-compose  configure_migration_runner.sh  curl_weight_api.sh  docker.service  inspect_backup.sh  run_migration_runner.sh  setup_vm.sh  ssh_for_migrations.sh  ssh_with_gcp_credentials.sh  vm-config.nix
server/: .env  .env.dev  .env.prod  .env.test  Cargo.toml  Dockerfile  Dockerfile.base-builder  Dockerfile.dev  Dockerfile.migration-runner
server/migrations/00000000000000_diesel_initial_setup/: up.sql
server/migrations/2023-10-28-025728_create_global_id_function_and_sequence/: down.sql  up.sql
server/migrations/2023-10-28-030510_create_weights/: down.sql  up.sql
server/scripts/: .cargo_custom_completion.zsh  build_and_deploy.sh  install-zsh-completion.sh
server/src/: env.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs
server/src/api/: mod.rs  weights.rs
server/src/db/: mod.rs  operations.rs  schema.rs  types.rs
server/src/models/: weight.rs  weights.rs
server/src/tests/: api_tests.rs  db_tests.rs
web-client/: Cargo.toml  Dockerfile.base-builder  Dockerfile.builder  Dockerfile.dev  index.html  index.scss
web-client/src/: main.rs  models.rs
