[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "extras"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
thiserror = "1.0.50"
