[package]
name = "web_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
gloo-net = "0.4.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.191", features = ["derive"] }
serde_derive = "1.0.191"
wasm-bindgen-futures = "0.4.38"
web-sys = "0.3.65"
yew = { version = "0.21.0", features = ["csr"] }
